--- a/package.json
+++ b/package.json
@@ -4,18 +4,33 @@
   "description": "A visualiser for Octopus energy tariffs",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && cp src/index.html docs/index.html",
-    "start": "node docs/index.js",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "dev": "tsc && node docs/index.js",
     "deploy": "npm run build && git add . && git commit -m 'chore: deploy updates' && git push",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/node": "^22.5.2",
-    "typescript": "^5.5.4"
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
