--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "octograph",
-  "version": "1.0.0",
-  "description": "A visualiser for Octopus energy tariffs",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "dev": "tsc && node docs/index.js",
-    "deploy": "npm run build && git add . && git commit -m 'chore: deploy updates' && git push",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/node": "^22.5.2",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "babel-loader": "^9.1.3",
-    "html-webpack-plugin": "^5.6.0",
-    "typescript": "^5.5.4",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "dependencies": {
-    "axios": "^1.7.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+ "name": "octograph",
+ "version": "1.0.0",
+ "description": "A visualiser for Octopus energy tariffs",
+ "main": "index.js",
+ "scripts": {
+  "dev": "webpack serve --mode development",
+  "build": "webpack --mode production",
+  "deploy": "npm run build && git add . && git commit -m 'chore: deploy updates' && git push",
+  "test": "jest"
+ },
+ "keywords": [],
+ "author": "",
+ "license": "ISC",
+ "devDependencies": {
+  "@babel/core": "^7.25.2",
+  "@babel/preset-env": "^7.25.4",
+  "@babel/preset-react": "^7.24.7",
+  "@babel/preset-typescript": "^7.24.7",
+  "@testing-library/dom": "^10.4.0",
+  "@testing-library/jest-dom": "^6.5.0",
+  "@testing-library/react": "^16.0.1",
+  "@types/jest": "^29.5.12",
+  "@types/node": "^22.5.2",
+  "@types/react": "^18.3.5",
+  "@types/react-dom": "^18.3.0",
+  "babel-loader": "^9.1.3",
+  "html-webpack-plugin": "^5.6.0",
+  "jest": "^29.7.0",
+  "jest-environment-jsdom": "^29.7.0",
+  "prettier": "^3.3.3",
+  "ts-jest": "^29.2.5",
+  "ts-node": "^10.9.2",
+  "typescript": "^5.5.4",
+  "webpack": "^5.94.0",
+  "webpack-cli": "^5.1.4",
+  "webpack-dev-server": "^5.1.0"
+ },
+ "dependencies": {
+  "axios": "^1.7.7",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1"
+ }
 }
