--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "html-webpack-plugin": "^5.6.0",
   "jest": "^29.7.0",
   "jest-environment-jsdom": "^29.7.0",
+  "jest-mock-axios": "^4.7.3",
   "prettier": "^3.3.3",
   "ts-jest": "^29.2.5",
   "ts-node": "^10.9.2",
@@ -37,6 +38,7 @@
   "webpack-dev-server": "^5.1.0"
  },
  "dependencies": {
+  "@tanstack/react-query": "^5.56.1",
   "axios": "^1.7.7",
   "react": "^18.3.1",
   "react-dom": "^18.3.1"
