--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
  "dependencies": {
   "@tanstack/react-query": "^5.56.1",
   "axios": "^1.7.7",
+  "axios-mock-adapter": "^2.0.0",
   "react": "^18.3.1",
   "react-dom": "^18.3.1"
  }
